Fix for icons being too low in Safari

--- a/styles/System/WindowManager/Window.module.scss
+++ b/styles/System/WindowManager/Window.module.scss
@@ -107,7 +107,7 @@ $buttonIconOpacity: 0.975;
 
       display: flex;
 
-      margin: 8px;
+      margin-left: 8px;
 
       button {
         font-size: 8px;
